换了个漂亮的主页图片

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-My GitHub Page
+<html>
+  <body>
+    <div style="width: 100%;">
+      <div style="width: 500px; margin: 50px auto;"><img title="内容比什么都重要。" alt="开到荼蘼" src="http://imgsrc.baidu.com/forum/pic/item/38f3b719ebc4b7459afc6df7cffc1e178b821509.jpg"></div>
+    </div>
+  </body>
+</html>
